fix full-bleed style

--- a/src/css/components/full-bleed.css
+++ b/src/css/components/full-bleed.css
@@ -2,6 +2,7 @@
   .full-bleed {
     width: 100vw;
     margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
   }
 
   .full-bleed-none {
